fixed some minor layout issues

--- a/src/app/admin/components/adminpanel/adminpanel.component.css
+++ b/src/app/admin/components/adminpanel/adminpanel.component.css
@@ -12,3 +12,7 @@
 .item:hover{
     background-color: #d1dae1;
 }
+
+.admin-side-bar {
+    height: 100% !important;
+}
