--- a/src/app/main/navigation/header/header.component.css
+++ b/src/app/main/navigation/header/header.component.css
@@ -28,3 +28,23 @@ mat-toolbar{
     height: 45px;
     border-radius: 50%;
 }
+
+.logo {
+    text-decoration: none;
+    cursor: pointer;
+    margin-right: 50px;
+}
+
+.logo-icon {
+    width: 38px;
+    height: 38px;
+}
+
+.logo-text {
+    margin-left: 8px;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 0.4px;
+    text-decoration: none;
+    color: white;
+}
